<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Scanner </string>
    <string name="app_name">Scanner </string>
    <string name="sCode">Codigo </string>
    <string name="sMessage">articulo</string>
    <string name="sHistoryCount">Cant. Previa: </string>
    <string name="sCount">Cantidad </string>
    <string name="sSave">Grabar</string>
    <string name="sUpdate">Reemplazar</string>
    <string name="sClear">Limpiar</string>
    <string name="sRead">Leer</string>
    <string name="sImport">Importar</string>
    <string name="sImportWeb">Url</string>
    <string name="sImportSdCard">SdCard</string>
    <string name="sImportCsv">CSV</string>
    <string name="sExport">Exportar</string>
    <string name="sExportWeb">Ftp</string>
    <string name="sExportSdCard">SdCard</string>
    <string name="sExportCsv">CSV</string>    
    <string name="sSetting">Configurar</string>
    <string name="sSelect">Seleccionar</string>
    <string name="sTxt">Texto</string>
    <string name="sAdd">Agregar</string>
    <string name="sSet">Ingresar</string>
    <string name="sQuery">Inventario</string>
    <string name="sPath">Direccion</string>
    <string name="sDelete">Eliminar</string>
    <string name="sDeleteInventario">Esta seguro de borrar el inventario? (no se podra recuperar)</string>
    <string name="scan">Escaner</string>
    <string name="scan_resut_lable">Resultado escaneado:</string>
    <string name="msg_default_status">Centrar un código de barras en el interior del rectángulo del visor para escanear. </string>
    <string name="download_wait">Descargando Base de Datos\", \"Por favor, espere ...</string>
    <string name="location">Deposito</string>
</resources>
