<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:layout_marginRight="10px" android:layout_marginLeft="10px"
		android:gravity="center_vertical" android:layout_marginTop="1px">
		<TextView android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="wrap_content" android:id="@+id/tvCode"
			android:text="@string/sCode"></TextView>
		<EditText android:layout_weight="1" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:id="@+id/etCode"
			android:inputType="number" />
		<ImageButton android:layout_height="50dp"
			android:layout_width="50dp" android:adjustViewBounds="true"
			android:id="@+id/ibRead" android:src="@drawable/camera1"/>
		<ImageButton android:layout_height="50dp"
			android:layout_width="50dp" android:adjustViewBounds="true"
			android:id="@+id/ibQuery" android:src="@drawable/magnifyingglass"/>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="match_parent" android:gravity="center_vertical"
		android:layout_marginLeft="20px">
		<ImageView android:layout_width="50dp"
			android:layout_height="50dp" android:adjustViewBounds="true"
			android:id="@+id/ivMessage" android:src="@drawable/warning1" />
		<LinearLayout android:layout_height="wrap_content" android:orientation="vertical"
			android:layout_width="match_parent" android:gravity="center_vertical"
			android:layout_marginLeft="20px">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:id="@+id/tvDescr"
				android:text="articulo" android:layout_marginLeft="20px"/>
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:id="@+id/tvUnidades_x_pack"
				android:text="cantidad x pack" android:layout_marginLeft="20px"/>
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:id="@+id/tvPrecio"
				android:text="precio" android:layout_marginLeft="20px"/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/linearLayoutHistoryCount" android:layout_width="match_parent"
		android:gravity="center_vertical" android:layout_marginLeft="10px"
		android:layout_marginRight="10px" android:layout_marginBottom="1px">
		<LinearLayout android:id="@+id/LayoutHistoryCount"
			android:orientation="horizontal" android:layout_height="wrap_content"
			android:layout_width="wrap_content">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/sHistoryCount"
				android:id="@+id/tvHistoryCount" />
			<TextView android:id="@+id/tvHistoryCountValue"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:text="0" android:layout_marginLeft="10px" />
		</LinearLayout>
		<LinearLayout android:layout_height="wrap_content"
			android:id="@+id/linearLayoutCount" android:layout_width="match_parent"
			android:gravity="center_vertical|right">
			<TextView android:id="@+id/tvCount" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/sCount"
				android:layout_marginRight="5px"></TextView>
			<EditText android:id="@+id/etCount" android:inputType="number"
				android:text="1" android:layout_height="50dp" android:minEms="0" android:layout_width="100dp"/>
			<LinearLayout android:layout_height="wrap_content"
				android:layout_gravity="right" android:id="@+id/linearLayoutBtIncDec"
				android:orientation="vertical" android:gravity="right"
				android:layout_width="wrap_content">
				<ImageButton android:layout_width="50dp"
					android:layout_height="wrap_content" android:adjustViewBounds="true"
					android:id="@+id/bIncrease" android:src="@drawable/add" />
				<ImageButton android:layout_height="wrap_content"
					android:layout_width="50dp" android:adjustViewBounds="true"
					android:id="@+id/bDecrease" android:src="@drawable/subtract" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content" android:layout_marginLeft="10px"
		android:id="@+id/llButton" android:layout_width="match_parent">
		<LinearLayout android:id="@+id/llButtonLeft"
			android:orientation="horizontal" android:layout_height="wrap_content"
			android:layout_width="wrap_content">
			<LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:gravity="center_horizontal">
				<ImageButton android:text="@string/sUpdate"
				android:id="@+id/bUpdate" android:src="@drawable/inbox" android:layout_width="match_parent" android:layout_height="45dp"/>
				<TextView android:layout_width="wrap_content" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="@string/sUpdate"/>
    		</LinearLayout>
    		<LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:weightSum="1" android:gravity="center_horizontal">
				<ImageButton android:layout_width="wrap_content" android:text="@string/sClear"
				android:id="@+id/bClear" android:src="@drawable/redo" android:layout_height="45dp"/>
				<TextView android:layout_width="wrap_content" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="@string/sClear"/>
    		</LinearLayout>
		</LinearLayout>
		<LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:gravity="center_horizontal">
			<Spinner android:id="@+id/spLocation"
			android:prompt="@string/location" android:isScrollContainer="true" android:layout_width="wrap_content" android:layout_height="45dp"/>
			<TextView android:layout_width="wrap_content" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="@string/location"/>
    	</LinearLayout>
		<LinearLayout android:layout_height="wrap_content"
			android:gravity="right" android:id="@+id/llButtonRight"
			android:layout_width="match_parent" android:layout_marginRight="9px"
			>
    		<LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:gravity="center_horizontal">
				<ImageButton android:id="@+id/bSave" android:text="@string/sSave" 
				android:layout_width="50dp" android:src="@drawable/zap" android:layout_height="45dp"/>
				<TextView android:layout_width="wrap_content" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="@string/sSave"/>
    		</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>