<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="wrap_content">		
    	<LinearLayout android:orientation="vertical" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:weightSum="1" android:gravity="center_horizontal">
			<ImageButton android:id="@+id/ibRead" android:src="@drawable/camera1" android:layout_width="match_parent" android:layout_height="50dp"/>
			<TextView android:layout_width="wrap_content" android:id="@+id/textView" android:layout_height="wrap_content" android:text="@string/sRead"/>
		</LinearLayout>
		<LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:weightSum="1" android:gravity="center_horizontal">
			<ImageButton android:scaleType="centerCrop" android:id="@+id/ibTextImput" android:layout_gravity="center_horizontal" android:layout_height="50dp" 
			android:layout_width="match_parent" android:src="@drawable/add1"/>
	    	<TextView android:layout_width="wrap_content" android:id="@+id/textView" android:layout_height="wrap_content" android:text="@string/sSet"/>
    	</LinearLayout>
    	<LinearLayout android:orientation="vertical" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:weightSum="1" android:gravity="center_horizontal">
			<ImageButton android:id="@+id/ibSave" android:layout_gravity="center_horizontal" android:layout_height="50dp" 
			android:layout_width="match_parent" android:src="@drawable/zap"/>
	    	<TextView android:layout_width="wrap_content" android:id="@+id/textView" android:layout_height="wrap_content" android:text="@string/sSave"/>
    	</LinearLayout>
	</LinearLayout>
	<LinearLayout android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent">
	<TextView android:id="@+id/path" android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<ListView android:id="@android:id/list" android:layout_height="match_parent" android:layout_width="match_parent"/>
	<TextView android:id="@android:id/empty" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="" />
	</LinearLayout>	
</LinearLayout>